--- a/macros.tex
+++ b/macros.tex
@@ -112,3 +112,6 @@
 \newcommand{\TABperformDel}[2]{#1 \xlongrightarrow{\aDel} #2}
 
 \newcommand{\sumhasmatched}[2]{#1 \mathrel{\textcolor{black}{\blacktriangleright_{+}}} #2}
+
+\newcommand{\subminsyn}[1]{\mathsf{submin}_{\Rightarrow}(#1)}
+\newcommand{\subminana}[1]{\mathsf{submin}_{\Leftarrow}(#1)}
