--- a/formally.tex
+++ b/formally.tex
@@ -1513,7 +1513,7 @@ analytic case than they do in the synthetic case. The problem is that both rules
 
 There are several possible ways to address this problem. One approach would be to modify the judgement forms to internalize this notion of ``rule of last resort''. This approach is related to focusing from proof theory \cite{Simmons11tr}. However, this approach would substantially complicate our presentation of the system.
 
-The approach that we take leaves the system unchanged. Instead, we define predicates over \emph{derivations} of the expression action judgements that excludes those derivations that apply subsumption prematurely, i.e. when another rule could have been applied. We call such derivations \emph{subsumption-minimal derivations}. We can establish determinism for subsumption-minimal derivations.
+The approach that we take leaves the system unchanged. Instead, we define predicates over \emph{derivations} of the expression action judgements that exclude those derivations that apply subsumption prematurely, i.e. when another rule could have been applied. We call such derivations \emph{subsumption-minimal derivations}. We can establish determinism for subsumption-minimal derivations.
 \begin{theorem}[Expression Action Determinism] ~
   \begin{enumerate}[itemsep=0px,partopsep=0px,topsep=0px]
   \item If $\hsyn{\hGamma}{\removeSel{\zexp}}{\htau}$ and
