updated implementation section for AE

--- a/formally.tex
+++ b/formally.tex
@@ -1528,4 +1528,4 @@ The approach that we take leaves the system unchanged. Instead, we define predic
 \end{theorem}
 
 The mechanization, discussed next, defines the predicates $\subminsyn{\mathcal{D}}$ and $\subminana{\mathcal{D}}$. In addition, it defines a mapping from
-any derivation into a corresponding subsumption-minimal derivation. Implementors of Hazelnut are expected only to implement this subsumption-minimal fragment.
+any derivation into a corresponding subsumption-minimal derivation. Implementations of Hazelnut need only implement this subsumption-minimal fragment.
