--- a/implementation.tex
+++ b/implementation.tex
@@ -51,5 +51,5 @@ The view computation renders the model (i.e. a Z-expression paired with a type) 
 are disabled when the corresponding action cannot be performed. We determine this by simply attempting to perform the
 action internally and handling the exception that is raised when an action
 is undefined. Each action form also has a corresponding keyboard shortcut. This design is not, of course, meant to score marks for
-usability or performance. Instead, as a simple reference implementation, it allows the reader to interact with the concepts presented in this paper, to aid in their understanding.  Additionally, we expect its source code to be of use to others who are interested in
+usability or performance. Instead, as a simple reference implementation, it allows the reader to interact with the system presented in this paper, to aid in their understanding.  Additionally, we expect its source code to be of use to others who are interested in
 layering a more fluid user interface atop the core semantics, or extensions thereof. 
