dropped construct arg per reviewer comment / lack of symmetry

--- a/appendix.tex
+++ b/appendix.tex
@@ -629,17 +629,17 @@ defined mutually inductively by Rules (\ref{Arules:performSyn}) and Rules
   }
 \end{equation}
 
-\begin{equation}
-  \inferrule{ }{
-    \performSyn
-      {\hGamma}
-      {\zwsel{\hexp}}
-      {\htau}
-      {\aConstruct{\farg}}
-      {\hap{\zwsel{\hehole}}{\hexp}}
-      {\tehole}
-  }
-\end{equation}
+% \begin{equation}
+%   \inferrule{ }{
+%     \performSyn
+%       {\hGamma}
+%       {\zwsel{\hexp}}
+%       {\htau}
+%       {\aConstruct{\farg}}
+%       {\hap{\zwsel{\hehole}}{\hexp}}
+%       {\tehole}
+%   }
+% \end{equation}
 
 \begin{equation}
   \inferrule{ }{
