--- a/macros.tex
+++ b/macros.tex
@@ -87,7 +87,7 @@
 \newcommand{\fvar}[1]{\mathtt{var}~#1}
 \newcommand{\flam}[1]{\mathtt{lam}~#1}
 \newcommand{\fap}{\mathtt{ap}}
-\newcommand{\farg}{\mathtt{arg}}
+% \newcommand{\farg}{\mathtt{arg}}
 \newcommand{\fnumlit}[1]{\mathtt{lit}~#1}
 \newcommand{\fplus}{\mathtt{plus}}
 \newcommand{\fhole}{\mathtt{hole}}
