--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -483,6 +483,9 @@ systems, for we will not forever stay confined to mere strings of symbols.}
 --- Marvin Minsky, Turing Award lecture \cite{DBLP:journals/jacm/Minsky70}
 \end{quote}
 
+\acks
+\input{acks.tex}
+
 \clearpage
 
 \bibliographystyle{abbrvnat}
