added an acknowledgement for Danny's COPE grant

--- a/acks.tex
+++ b/acks.tex
@@ -1,2 +1,4 @@
 Thanks to Ed Morehouse for counsel on mechanization and Barendrecht's
 Convention, and to Vincent Zeng for \textit{pro bono} artistic services.
+%This is Danny Dig's COPE grant. He asked me to add the grant.
+This work was partially funded through the NSF CCF-1439957 grant.
